test/error/if_bool_in_arith.snek
(+ (if true true 2) 3)
